--- a/Fysio WebApplication/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Fysio WebApplication/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,7 +27,11 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
         </div>
         <div class="col-md-6">
             <section>
@@ -37,17 +41,23 @@
                     <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    <label asp-for="Input.SurName"></label>
+                    <input asp-for="Input.SurName" class="form-control" />
+                    <span asp-validation-for="Input.SurName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.ConfirmPassword"></label>
-                    <input asp-for="Input.ConfirmPassword" class="form-control" />
-                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    <label id="RegistrationNumber">BIG Number</label>
+                    <input asp-for="Input.StudentBIGNumber" class="form-control" />
+                    <span asp-validation-for="Input.StudentBIGNumber" class="text-danger"></span>
                 </div>
-                <button type="submit" class="btn btn-primary">Register</button>
+                <div class="form-group">
+                    <label asp-for="Input.IsStudent"></label>
+                    <input asp-for="Input.IsStudent" id="StudentCheckbox" onclick="ChangeRegisterNumber()" class="form-control"/>
+                    <span asp-validation-for="Input.IsStudent" class="text-danger"></span>
+                </div>
+
             </section>
+            <button type="submit" class="btn btn-primary">Register</button>
         </div>
     </div>
 </form>
@@ -55,4 +65,19 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script type="text/javascript">
+        function ChangeRegisterNumber() {
+            // Get the checkbox
+            var checkBox = document.getElementById("StudentCheckbox");
+            // Get the output text
+            var text = document.getElementById("RegistrationNumber");
+
+            // If the checkbox is checked, display the output text
+            if (checkBox.checked == true) {
+                text.textContent = "Student Number";
+            } else {
+                text.textContent = "BIG Number";
+            }
+        }
+    </script>
 }
