Added all needed controllers with basic CRUD

--- a/Fysio WebApplication/Views/Patient/Edit.cshtml
+++ b/Fysio WebApplication/Views/Patient/Edit.cshtml
@@ -71,7 +71,7 @@
         </form>
     </div>
     <div class="col-sm-5">
-        <img src ="@ViewBag.ImageDataUrl" />
+        <img class="img-thumbnail" src ="@ViewBag.ImageDataUrl" />
     </div>
 </div>
 
