--- a/Fysio WebApplication/Views/Patient/Index.cshtml
+++ b/Fysio WebApplication/Views/Patient/Index.cshtml
@@ -71,7 +71,7 @@
             </td>
             <td>
                 <a asp-controller="MedicalFile">File</a>|
-                <a asp-controller="Notes">Notes</a>
+                <a asp-controller="Note">Notes</a>
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.PatientId }) |
