--- a/Fysio WebApplication/Views/Shared/_Layout.cshtml
+++ b/Fysio WebApplication/Views/Shared/_Layout.cshtml
@@ -28,12 +28,16 @@
                         {
                             <li class="nav-item">
                                 <div class="dropdown">
-                                    <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Menu
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <a class="dropdown-item" href="/PracticeRoom">Practice Room</a>
                                         <a class="dropdown-item" href="/Patient">Patient</a>
+                                        <a class="dropdown-item" href="/Note">Note</a>
+                                        <a class="dropdown-item" href="/MedicalFile">MedicalFile</a>
+                                        <a class="dropdown-item" href="/TreatmentPlan">TreatmentPlan</a>
+                                        <a class="dropdown-item" href="/Appointment">Appointments</a>
                                     </div>
                                 </div>
                             </li>
