--- a/Fysio WebApplication/Views/Patient/Details.cshtml
+++ b/Fysio WebApplication/Views/Patient/Details.cshtml
@@ -12,7 +12,7 @@
     <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="@ViewBag.ImageDataUrl" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">@Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.SurName)</h5><dl class="row">
+            <h5 class="card-title">@Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.SurName)</h5>
         <dl class="row">
             <dt class="col-sm-6">
                 @Html.DisplayNameFor(model => model.PatientId)
