--- a/Fysio WebApplication/Views/MedicalFile/Index.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Index.cshtml
@@ -5,10 +5,9 @@
 }
 
 <h1>Index</h1>
-
-@*<p>
-    <a asp-action="Create">Create New</a>
-</p>*@
+<p>
+    <a asp-action="IndexPersonalSupervise">Go to your Supervise files</a> | <a asp-action="IndexPersonalTherapist">Go to your medicalfiles</a> 
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -56,8 +55,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id}) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) | 
-                @Html.ActionLink("Notes", "Notes", new {id = item.Id})
+                @Html.ActionLink("Details", "Details", new { id = item.Id })
             </td>
         </tr>
 }
