--- a/Fysio WebApplication/Views/MedicalFile/Notes.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Notes.cshtml
@@ -6,9 +6,6 @@
 
 <h1>Notes</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -19,41 +16,32 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreatedUtc)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdEmployee)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.OpenForPatient)
             </th>
             <th></th>
         </tr>
     </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedUtc)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdEmployee)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OpenForPatient)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
+        @if (Model == null)
+        {
+        <p> Geen notes voor dit dossier </p>
+        }
+        else
+        {
+            @foreach (var item in Model)
+            {
+            <tbody>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.OpenForPatient)
+                    </td>
+                </tr>
+            </tbody>
+            }
+        }
 </table>
