--- a/Fysio WebApplication/Views/Patient/Index.cshtml
+++ b/Fysio WebApplication/Views/Patient/Index.cshtml
@@ -70,8 +70,7 @@
                 @Html.DisplayFor(modelItem => item.IsStudent)
             </td>
             <td>
-                <a asp-controller="MedicalFile">File</a>|
-                <a asp-controller="Note">Notes</a>
+                <a asp-controller="MedicalFile">MedicalFiles</a>
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.PatientId }) |
