--- a/Fysio WebApplication/Views/TreatmentPlan/Details.cshtml
+++ b/Fysio WebApplication/Views/TreatmentPlan/Details.cshtml
@@ -16,6 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Type)
         </dd>
+        <dt class="col-sm-2">
+            Beschijving
+        </dt>
+        <dd class="col-sm-10">
+            @Html.Raw(ViewBag.Description)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
@@ -32,7 +38,7 @@
             @Html.DisplayNameFor(model => model.TreatmentPerformedBy)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TreatmentPerformedBy)
+            @Html.Raw(ViewBag.Performed)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TreatmentDate)
