--- a/Fysio WebApplication/Views/MedicalFile/IndexPersonalTherapist.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/IndexPersonalTherapist.cshtml
@@ -45,8 +45,7 @@
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Notes", "Notes", new { id = item.Id })
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
                 </td>
             </tr>
         }
