Rescaffolded Identity Framework.

--- a/Fysio WebApplication/Views/Appointment/Delete.cshtml
+++ b/Fysio WebApplication/Views/Appointment/Delete.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.Patient.IdNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.ID)
+            @Html.DisplayNameFor(model => model.Employee.Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.ID)
+            @Html.DisplayFor(model => model.Employee.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
