--- a/Fysio WebApplication/Views/Appointment/Index.cshtml
+++ b/Fysio WebApplication/Views/Appointment/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Patient.IdNumber)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Employee.ID)
+                @Html.DisplayNameFor(model => model.Employee.Id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.Patient.IdNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Employee.ID)
+                @Html.DisplayFor(modelItem => item.Employee.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
