--- a/Fysio WebApplication/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Fysio WebApplication/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -5,18 +5,18 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
+<h2>Enter your email.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-floating">
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
         </form>
     </div>
 </div>
