--- a/Fysio WebApplication/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Fysio WebApplication/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,77 +6,62 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-    <h4>Create a new account.</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
+<div class="row">
+    <div class="col-md-4">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <h2>Create a new account.</h2>
+            <hr />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-floating">
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-floating">
+                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-floating">
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <section>
-                <div class="form-group">
-                    <label asp-for="Input.FirstName"></label>
-                    <input asp-for="Input.FirstName" class="form-control" />
-                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.SurName"></label>
-                    <input asp-for="Input.SurName" class="form-control" />
-                    <span asp-validation-for="Input.SurName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label id="RegistrationNumber">BIG Number</label>
-                    <input asp-for="Input.StudentBIGNumber" class="form-control" />
-                    <span asp-validation-for="Input.StudentBIGNumber" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.IsStudent"></label>
-                    <input asp-for="Input.IsStudent" id="StudentCheckbox" onclick="ChangeRegisterNumber()" class="form-control"/>
-                    <span asp-validation-for="Input.IsStudent" class="text-danger"></span>
-                </div>
-            </section>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </div>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+        </form>
     </div>
-</form>
-    
+    <div class="col-md-6 col-md-offset-2">
+        <section>
+            <h3>Use another service to register.</h3>
+            <hr />
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                {
+                    <div>
+                        <p>
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
+                            about setting up this ASP.NET application to support logging in via external services</a>.
+                        </p>
+                    </div>
+                }
+                else
+                {
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in Model.ExternalLogins)
+                                {
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </section>
+    </div>
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script type="text/javascript">
-        function ChangeRegisterNumber() {
-            // Get the checkbox
-            var checkBox = document.getElementById("StudentCheckbox");
-            // Get the output text
-            var text = document.getElementById("RegistrationNumber");
-
-            // If the checkbox is checked, display the output text
-            if (checkBox.checked == true) {
-                text.textContent = "Student Number";
-            } else {
-                text.textContent = "BIG Number";
-            }
-        }
-    </script>
 }
