--- a/Fysio WebApplication/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Fysio WebApplication/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -9,7 +9,8 @@
     if (@Model.DisplayConfirmAccountLink)
     {
 <p>
-    Bedankt voor het registreren! U kunt nu gebruik maken van de applicatie!
+    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
+    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
 </p>
     }
     else
@@ -19,3 +20,4 @@
 </p>
     }
 }
+
