--- a/Fysio WebApplication/Views/MedicalFile/Details.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Details.cshtml
@@ -39,14 +39,14 @@
             Therapist
         </dt>
         <dd class="col-sm-10">
-            @Html.Raw(ViewBag.Therapist)
+            @Html.DisplayFor(model => model.IntakeSupervision.ApplicationUser.FirstName) @Html.DisplayFor(model => model.IntakeSupervision.ApplicationUser.SurName)
         </dd>
         <dt class="col-sm-2">
             Supervision
         </dt>
         @*Maybe in the future the Superivsion can be linked towards his viewable acocunt?*@
         <dd class="col-sm-10">
-            @Html.Raw(ViewBag.Supervision)
+            @Html.DisplayFor(model => model.IntakeSupervision.ApplicationUser.FirstName) @Html.DisplayFor(model => model.IntakeSupervision.ApplicationUser.SurName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DateOfCreation)
