--- a/Fysio WebApplication/Views/MedicalFile/Index.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Index.cshtml
@@ -42,10 +42,10 @@
                 @Html.DisplayFor(modelItem => item.DiagnosisCode)
             </td>
             <td>
-                @Html.Raw(item.IntakeSupervision.FirstName) @Html.Raw(item.IntakeSupervision.SurName)
+                    @Html.Raw(item.IntakeSupervision.ApplicationUser.FirstName) @Html.Raw(item.IntakeSupervision.ApplicationUser.SurName)
             </td>
             <td>
-                @Html.Raw(item.IntakeSupervision.FirstName) @Html.Raw(item.IntakeSupervision.SurName)
+                    @Html.Raw(item.IntakeSupervision.ApplicationUser.FirstName) @Html.Raw(item.IntakeSupervision.ApplicationUser.SurName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateOfCreation)
