--- a/Fysio WebApplication/Views/Patient/Details.cshtml
+++ b/Fysio WebApplication/Views/Patient/Details.cshtml
@@ -21,28 +21,22 @@
                     @Html.DisplayFor(model => model.IdNumber)
                 </dd>
                 <dt class="col-sm-6">
-                    @Html.DisplayNameFor(model => model.FirstName)
+                    @Html.DisplayNameFor(model => model.ApplicationUser.FirstName)
                 </dt>
                 <dd class="col-sm-6">
-                    @Html.DisplayFor(model => model.FirstName)
+                    @Html.DisplayFor(model => model.ApplicationUser.FirstName)
                 </dd>
                 <dt class="col-sm-6">
-                    @Html.DisplayNameFor(model => model.SurName)
+                    @Html.DisplayNameFor(model => model.ApplicationUser.SurName)
                 </dt>
                 <dd class="col-sm-6">
-                    @Html.DisplayFor(model => model.SurName)
+                    @Html.DisplayFor(model => model.ApplicationUser.SurName)
                 </dd>
                 <dt class="col-sm-6">
-                    @Html.DisplayNameFor(model => model.Email)
+                    @Html.DisplayNameFor(model => model.ApplicationUser.Email)
                 </dt>
                 <dd class="col-sm-6">
-                    @Html.DisplayFor(model => model.Email)
-                </dd>
-                <dt class="col-sm-6">
-                    @Html.DisplayNameFor(model => model.IdNumber)
-                </dt>
-                <dd class="col-sm-6">
-                    @Html.DisplayFor(model => model.IdNumber)
+                    @Html.DisplayFor(model => model.ApplicationUser.Email)
                 </dd>
                 <dt class="col-sm-6">
                     @Html.DisplayNameFor(model => model.DateOfBirth)
@@ -64,13 +58,13 @@
                 </dd>
             </dl>
             @Html.ActionLink("Edit", "Edit", new { id = Model.IdNumber }) |
-            @if (ViewBag.MedicalId != null)
+            @if (Model.MedicalFile != null)
             {
-                @Html.ActionLink("MedicalFile | ", "Details", "MedicalFile", new { ViewBag.MedicalId })
+                @Html.ActionLink("MedicalFile | ", "Details", "MedicalFile", new { id = Model.MedicalFile.Id })
             }
             else
             {
-                @Html.ActionLink("Add File | ", "MedicalFileNew", new { ViewBag.MedicalId })
+                @Html.ActionLink("Add File | ", "MedicalFileNew", new { id = Model.IdNumber})
             }
             <a asp-action="Index">Back to List</a>
         </div>
