--- a/Fysio WebApplication/Views/Patient/Create.cshtml
+++ b/Fysio WebApplication/Views/Patient/Create.cshtml
@@ -33,7 +33,8 @@
                     <input type="file" id="file1"
                            name="file1"
                            multiple="multiple"
-                           class="form-control" />
+                           class="form-control" 
+                           accept="image/*" />
                     <span asp-validation-for="ImgData" class="text-danger"></span>
                 </div>
             </div>
