--- a/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -10,15 +10,16 @@
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hey @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
+        <a class="nav-link text-dark" href="/auth/logout">Log Out</a>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" href="/Auth/Register">Register</a>
+        <a class="nav-link text-dark" href="/Auth/RegisterEmployee">Register Employee</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" href="/Auth/RegisterPatient">Register Patient</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" href="/Auth/Login">Login</a>
