--- a/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hey @User.Identity.Name!</a>
+        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Index" title="Manage">Hey @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" href="/auth/logout">Log Out</a>
