commented dummy text

--- a/Fysio WebApplication/Views/Home/Index.cshtml
+++ b/Fysio WebApplication/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Welkom</h1>
     <p> Avans Fysio Web Portaal voor Therapeuten en Studenten </p>
-    <p> CREATE A THING FOR THE EMPLOYEE TO SEE IT'S NEXT PATIENT IMMEDIATLY / ROOSTER</p>
+    <!--<p> CREATE A THING FOR THE EMPLOYEE TO SEE IT'S NEXT PATIENT IMMEDIATLY / ROOSTER</p>
     <p> WHEN IT'S A PATIENT, THEN JUST SHOW IT'S NEXT APPOINTMENT.</p>
-    <p> ALSO HAVE A DIFFERENT NAV FOR EACH ROLL. BUT THAT'S EASIER.</p>
+    <p> ALSO HAVE A DIFFERENT NAV FOR EACH ROLL. BUT THAT'S EASIER.</p>-->
+    
 </div>
