Update on medical files details. Also changes to check if webservice fully renews

--- a/Fysio WebApplication/Views/MedicalFile/Details.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Details.cshtml
@@ -39,7 +39,7 @@
             Therapist
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IntakeSupervision.ApplicationUser.FirstName) @Html.DisplayFor(model => model.IntakeSupervision.ApplicationUser.SurName)
+            @Html.DisplayFor(model => model.IntakeTherapistId.ApplicationUser.FirstName) @Html.DisplayFor(model => model.IntakeTherapistId.ApplicationUser.SurName)
         </dd>
         <dt class="col-sm-2">
             Supervision
