Added dataannotations for models. + Bug fix for a typo.

--- a/Fysio WebApplication/Views/MedicalFile/Index.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Index.cshtml
@@ -42,7 +42,7 @@
                 @Html.DisplayFor(modelItem => item.DiagnosisCode)
             </td>
             <td>
-                    @Html.Raw(item.IntakeSupervision.ApplicationUser.FirstName) @Html.Raw(item.IntakeSupervision.ApplicationUser.SurName)
+                    @Html.Raw(item.IntakeTherapistId.ApplicationUser.FirstName) @Html.Raw(item.IntakeTherapistId.ApplicationUser.SurName)
             </td>
             <td>
                     @Html.Raw(item.IntakeSupervision.ApplicationUser.FirstName) @Html.Raw(item.IntakeSupervision.ApplicationUser.SurName)
