--- a/Fysio WebApplication/Views/Shared/_Layout.cshtml
+++ b/Fysio WebApplication/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <title>@ViewData["Title"] - Fysio_WebApplication</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
 </head>
 <body>
     <header>
@@ -39,6 +40,7 @@
                                             <a class="dropdown-item" href="/MedicalFile">MedicalFile</a>
                                             <a class="dropdown-item" href="/Auth/RegisterEmployee">Register Employee</a>
                                             <a class="dropdown-item" href="/Auth/RegisterPatient">Register Patient</a>
+                                            <a class="dropdown-item" href="/Appointment/Availability">Availability (DEV)</a>
                                         }
                                         @if (User.HasClaim("UserType", "Patient"))
                                         {
