--- a/Fysio WebApplication/Views/Shared/_Layout.cshtml
+++ b/Fysio WebApplication/Views/Shared/_Layout.cshtml
@@ -40,12 +40,13 @@
                                             <a class="dropdown-item" href="/MedicalFile">MedicalFile</a>
                                             <a class="dropdown-item" href="/Auth/RegisterEmployee">Register Employee</a>
                                             <a class="dropdown-item" href="/Auth/RegisterPatient">Register Patient</a>
-                                            <a class="dropdown-item" href="/Appointment/Availability">Availability (DEV)</a>
+                                            <a class="dropdown-item" href="/Appointment/Availability">Availability</a>
                                         }
                                         @if (User.HasClaim("UserType", "Patient"))
                                         {
                                             <a class="dropdown-item" href="/MedicalFile">My Medical File</a>
-                                            <a class="dropdown-item" href="/Account/Index">Profiel</a>
+                                            <a class="dropdown-item" href="/Account/Index">Profile</a>
+                                            <a class="dropdown-item" href="/appointment/details">Appointment</a>
                                         }
                                     </div>
                                 </div>
@@ -57,6 +58,17 @@
         </nav>
     </header>
     <div class="container">
+        @if(ViewBag.Success is not null){
+            <div class="alert alert-success" role="alert">
+                @ViewBag.Success
+            </div>
+        }
+        @if (ViewBag.Error is not null)
+        {
+            <div class="alert alert-danger" role="alert">
+                @ViewBag.Error
+            </div>
+        }
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
