--- a/Fysio WebApplication/Views/MedicalFile/IndexPersonalSupervise.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/IndexPersonalSupervise.cshtml
@@ -6,7 +6,7 @@
 
 <h1>All Medical Files you supervise</h1>
 <p>
-    <a asp-action="IndexPersonalSupervise">Go to your Supervise files</a> | <a asp-action="IndexPersonalTherapist">Go to your medicalfiles</a> | <a asp-action="Index">Go back to all files</a>
+    <a asp-action="IndexPersonalSupervise">Go to your Supervise files</a> | <a asp-action="IndexPersonalTherapist">Go to your medicalfiles</a> | <a asp-action="Index">Go back to all files</a> | <a asp-action="Create">Create MedicalFile</a>
 </p>
 
 <table class="table">
