--- a/Fysio WebApplication/Views/Auth/Login.cshtml
+++ b/Fysio WebApplication/Views/Auth/Login.cshtml
@@ -9,7 +9,7 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h2>Use a Patient account to log in.</h2>
+                <h2>Use your account to log in.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
@@ -25,17 +25,6 @@
                 <div>
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
-                <!--<div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>-->
             </form>
         </section>
     </div>
