--- a/Fysio WebApplication/Views/Auth/RegisterPatient.cshtml
+++ b/Fysio WebApplication/Views/Auth/RegisterPatient.cshtml
@@ -71,7 +71,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="@Model.IsStudent"></label>
-                <input asp-for="@Model.IsStudent" class="form-control" onclick="ChangeRegisterNumber()" aria-required="true" />
+                <input asp-for="@Model.IsStudent" class="form-control" aria-required="true" />
                 <span asp-validation-for="@Model.IsStudent" class="text-danger"></span>
             </div>
         </div>
