--- a/Fysio WebApplication/Views/MedicalFile/Create.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form action="@Html.Raw(ViewBag.Url)" method="post" novalidate="novalidate">
+        <form action="/MedicalFile/Create" method="post" novalidate="novalidate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
@@ -18,11 +18,8 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="control-label">Diagnose</label>
-                <select class="form-control" asp-for="Id" asp-items="@(ViewBag.Diagnoses)">
-                    <!--Not for edit:-->
-                    <option disabled selected>Please select one</option>
-                </select>
+                <label asp-for="DiagnosisCode" class="control-label"></label>
+                <input asp-for="DiagnosisCode" class="form-control" />
                 <span asp-validation-for="DiagnosisCode" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,15 +27,18 @@
                 <input asp-for="DateOfDischarge" class="form-control" />
                 <span asp-validation-for="DateOfDischarge" class="text-danger"></span>
             </div>
-            <br />
-            <input value="@Html.Raw(ViewBag.PatientId)" name="PatientId" type="hidden" />
+            <div class="form-group">
+                <label asp-for="PatientEmail" class="control-label"></label>
+                <input asp-for="PatientEmail" class="form-control" />
+                <span asp-validation-for="PatientEmail" class="text-danger"></span>
+            </div>
+            <hr />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-<br />
 
 <div>
     <a href="javascript:history.go(-1)">Back</a>
