--- a/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -4,19 +4,22 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
+<!--<li class="nav-item">
+        <a href="/" class="darkmodeButton" id="darkmodeButton">🌓</a>
+</li>-->
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" href="/Account/Index" title="Manage">Hey @User.Identity.Name!</a>
+        <a  class="nav-link" href="/Account/Index" title="Manage">Hey @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" href="/auth/logout">Log Out</a>
+        <a class="nav-link" href="/auth/logout">Log Out</a>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" href="/Auth/Login">Login</a>
+        <a class="nav-link" href="/Auth/Login">Login</a>
     </li>
 }
 </ul>
