--- a/Fysio WebApplication/Views/Patient/Details.cshtml
+++ b/Fysio WebApplication/Views/Patient/Details.cshtml
@@ -85,7 +85,7 @@
                             @Html.DisplayNameFor(model => model.MedicalFile.DiagnosisCode)
                         </dt>
                         <dd class="col-sm-6">
-                            @Html.DisplayFor(model => model.MedicalFile.DiagnosisCode)
+                            @ViewBag.Diagnosis)
                         </dd>
                         <dt class="col-sm-6">
                             Body Location
