--- a/Fysio WebApplication/Views/TreatmentPlan/Details.cshtml
+++ b/Fysio WebApplication/Views/TreatmentPlan/Details.cshtml
@@ -20,13 +20,13 @@
             Treatment
         </dt>
         <dd class="col-sm-10">
-            TODO: TRETMENT
+            @ViewBag.Description
         </dd>
         <dt class="col-sm-2">
             Explanation Required
         </dt>
         <dd class="col-sm-10">
-            TODO: Explanation Required
+            @ViewBag.ExplanationRequired
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
