--- a/Fysio WebApplication/Views/TreatmentPlan/Index.cshtml
+++ b/Fysio WebApplication/Views/TreatmentPlan/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Particularities)
             </td>
             <td>
-                @Html.DisplayNameFor(modelItem => item.TreatmentPerformedBy.ApplicationUser.FirstName) @Html.DisplayNameFor(Modelitem => item.TreatmentPerformedBy.ApplicationUser.SurName)
+                @Html.DisplayNameFor(modelItem => item.TreatmentPerformedBy.FirstName) @Html.DisplayNameFor(Modelitem => item.TreatmentPerformedBy.SurName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TreatmentDate)
