--- a/Fysio WebApplication/Views/MedicalFile/Edit.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Edit.cshtml
@@ -18,8 +18,8 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DiagnosisCode" class="control-label"></label>
-                <input asp-for="DiagnosisCode" class="form-control" />
+                <label class="control-label">Diagnose</label>
+                <select class="form-control" asp-for="DiagnosisCode" asp-items="@(ViewBag.Diagnoses)"></select>
                 <span asp-validation-for="DiagnosisCode" class="text-danger"></span>
             </div>
             <div class="form-group">
