--- a/Fysio WebApplication/Views/Patient/CreateMedicalFile.cshtml
+++ b/Fysio WebApplication/Views/Patient/CreateMedicalFile.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Diagnose</label>
-                <select class="form-control" asp-for="Id" asp-items="@(ViewBag.Diagnoses)">
+                <select class="form-control" asp-for="DiagnosisCode" asp-items="@(ViewBag.Diagnoses)">
                     <!--Not for edit:-->
                     <option disabled selected>Please select one</option>
                 </select>
@@ -31,7 +31,7 @@
                 <span asp-validation-for="DateOfDischarge" class="text-danger"></span>
             </div>
             <br />
-            <input value="@Html.Raw(ViewBag.PatientId)" name="PatientId" type="hidden" />
+            <input value="@Html.Raw(ViewBag.PatientId)" name="id" type="hidden" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
