--- a/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -16,8 +16,10 @@
         <a class="nav-link" href="/auth/logout">Log Out</a>
     </li>
 }
-else
-{
+else{
+    <li class="nav-item">
+        <a class="dropdown-item" href="/Auth/RegisterPatient">Register Patient</a>
+    </li>
     <li class="nav-item">
         <a class="nav-link" href="/Auth/Login">Login</a>
     </li>
