--- a/Fysio WebApplication/Views/TreatmentPlan/Create.cshtml
+++ b/Fysio WebApplication/Views/TreatmentPlan/Create.cshtml
@@ -13,8 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
+                <label class="control-label">Treatments</label>
+                <select class="form-control" asp-for="Type" asp-items="@(ViewBag.Treatments)">
+                    <!--Not for edit:-->
+                    <option disabled selected>Please select one</option>
+                </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
