--- a/Fysio WebApplication/Views/Error/Index.cshtml
+++ b/Fysio WebApplication/Views/Error/Index.cshtml
@@ -5,13 +5,13 @@
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
+<p> <strong> Something went wrong. </strong></p>
 @if(ViewBag.ErrorCode != null){
-        <p><strong> Oops. Something went wrong! </strong></p>
         <p><strong>Error Code:</strong> <code>@ViewBag.ErrorCode</code></p>
-}else{
-    <p>
-        <strong> Oops. Something went wrong! </strong>
-    </p>
+}
+
+@if (ViewBag.ErrorString is not null){
+    <p> <strong> Error message: @ViewBag.ErrorString</strong></p>
 }
 
 
