--- a/Fysio WebApplication/Views/Patient/Details.cshtml
+++ b/Fysio WebApplication/Views/Patient/Details.cshtml
@@ -85,19 +85,19 @@
                             @Html.DisplayNameFor(model => model.MedicalFile.DiagnosisCode)
                         </dt>
                         <dd class="col-sm-6">
-                            @ViewBag.Diagnosis)
+                            @ViewBag.Diagnosis
                         </dd>
                         <dt class="col-sm-6">
                             Body Location
                         </dt>
                         <dd class="col-sm-6">
-                            @Html.Raw(ViewBag.BodyLocation)
+                            @ViewBag.BodyLocation
                         </dd>
                         <dt class="col-sm-6">
                             Pathology
                         </dt>
                         <dd class="col-sm-6">
-                            @Html.Raw(ViewBag.Pathology)
+                            @ViewBag.Pathology
                         </dd>
                         <dt class="col-sm-6">
                             Therapist
