--- a/Fysio WebApplication/Views/Auth/RegisterPatient.cshtml
+++ b/Fysio WebApplication/Views/Auth/RegisterPatient.cshtml
@@ -70,8 +70,8 @@
                 <span asp-validation-for="@Model.DateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="@Model.IsStudent"></label>
-                <input asp-for="@Model.IsStudent" class="form-control" aria-required="true" />
+                <label asp-for="@Model.IsStudent"></label><br />
+                <input asp-for="@Model.IsStudent" aria-required="true" />
                 <span asp-validation-for="@Model.IsStudent" class="text-danger"></span>
             </div>
         </div>
