--- a/Fysio WebApplication/Views/Auth/RegisterEmployee.cshtml
+++ b/Fysio WebApplication/Views/Auth/RegisterEmployee.cshtml
@@ -47,8 +47,8 @@
                 <span asp-validation-for="@Model.SurName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="@Model.IsStudent"></label>
-                <input asp-for="@Model.IsStudent" class="form-control" onclick="ChangeRegisterNumber()" aria-required="true" />
+                <label asp-for="@Model.IsStudent"></label><br />
+                <input asp-for="@Model.IsStudent" onclick="ChangeRegisterNumber()" class="custom-checkbox-m" aria-required="true" />
                 <span asp-validation-for="@Model.IsStudent" class="text-danger"></span>
             </div>
             <div class="form-group">
