--- a/Fysio WebApplication/Views/Home/Index.cshtml
+++ b/Fysio WebApplication/Views/Home/Index.cshtml
@@ -8,7 +8,11 @@
 
     @if (User.Identity.IsAuthenticated)
     {
-        @if (ViewBag.AppointmentsNow is not null)
+        @if (ViewBag.AppointmentsNextCount == 0 && ViewBag.AppointmentsNowCount == 0)
+        {
+            <p>You don't have any appointments.'.</p>
+        }
+        @if (ViewBag.AppointmentsNow.Count > 0)
         {
             <h5> Amount of appointments today : @ViewBag.AppointmentsNowCount</h5>
             <hr/>
@@ -33,7 +37,8 @@
         }else{
             <h5> No Appointments for today.</h5>
         }
-        @if (ViewBag.AppointmentsNext is not null){
+        @if (ViewBag.AppointmentsNext.Count > 0)
+        {
             <h5> Amount of appointments upcoming : @ViewBag.AppointmentsNextCount</h5>
             <hr />
             <div class="row">
@@ -58,14 +63,13 @@
         }else{
             <h5> No upcoming Appointments.</h5>
         }
-        @if (ViewBag.AppointmentsNext is null && ViewBag.AppointmentsNow is null)
+        @if (ViewBag.AppointmentsNextCount == 0 && ViewBag.AppointmentsNowCount == 0)
         {
             <p>U heeft geen afspraak.</p>
-            @if (User.HasClaim("UserType", "Patient"))
-            {
-                @Html.ActionLink("Afspraak maken", "Create", "Appointment")
-            }
-
+        }
+        @if (User.HasClaim("UserType", "Patient"))
+        {
+            @Html.ActionLink("Afspraak maken", "Create", "Appointment")
         }
     }else{
         <p> Avans Fysio Web portal for it's therapists, students and patients.</p>
