--- a/Fysio WebApplication/Views/Shared/_Layout.cshtml
+++ b/Fysio WebApplication/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
           rel="stylesheet" />
     <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.dark.min.css"
           rel="stylesheet" />
     
 </head>
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" >
-                    <img src="~/img/Logo.png" alt="..." height="36">
+                    <img src="~/img/Logo-DarkMode.png" alt="..." height="36">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,6 @@
                                         {
                                             <a class="dropdown-item" href="/MedicalFile">My Medical File</a>
                                             <a class="dropdown-item" href="/Account/Index">Profile</a>
-                                            <a class="dropdown-item" href="/appointment/details">Appointment</a>
                                         }
                                     </div>
                                 </div>
@@ -85,7 +84,10 @@
             @RenderBody()
         </main>
     </div>
-
+    <br />
+    <br />
+    <br />
+    <br />
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; @DateTime.Now.Year - Fysio_WebApplication
@@ -95,11 +97,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/js/darkmode.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script>
-        document.querySelector("#darkmodeButton").onclick = function (e) {
-            darkmode.toggleDarkMode();
-        }
-    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
