Temp changes to project

--- a/Fysio WebApplication/Views/Appointment/Availability.cshtml
+++ b/Fysio WebApplication/Views/Appointment/Availability.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.ViewModels.AvailabilityModel
+﻿@model Fysio_WebApplication.ViewModels.AvailabilityModel
 @{
     ViewData["Title"] = "Create Availability";
 }
