--- a/Fysio WebApplication/Views/Auth/RegisterEmployee.cshtml
+++ b/Fysio WebApplication/Views/Auth/RegisterEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.ViewModels.RegisterEmployeeModel
+﻿@model Fysio_WebApplication.ViewModels.RegisterEmployeeModel
 @{
     ViewData["Title"] = "Register new Employee";
 }
