--- a/Fysio WebApplication/Views/Auth/RegisterPatient.cshtml
+++ b/Fysio WebApplication/Views/Auth/RegisterPatient.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.ViewModels.RegisterPatientModel
+﻿@model Fysio_WebApplication.ViewModels.RegisterPatientModel
 @{
     ViewData["Title"] = "Register new Patient";
 }
