--- a/Fysio WebApplication/Views/Shared/Error.cshtml
+++ b/Fysio WebApplication/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.ViewModel.ErrorViewModel
+﻿@model Fysio_WebApplication.ViewModels.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
